--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: java
 jdk: oraclejdk8
 
+before_install:
+ - chmod +x gradlew
+ 
 install:
-  -  ./gradlew assemble
+  -  ./gradlew assemble -x test
 
 script:
   -  ./gradlew check
